--- a/src/app/modules/ingresos/pages/listar-ingresos/listar-ingresos.html
+++ b/src/app/modules/ingresos/pages/listar-ingresos/listar-ingresos.html
@@ -99,7 +99,7 @@
                             </td>
 
                             <td class="col-acciones">
-                                <button class="btn-ver" (click)="verDetalle(ingreso)">
+                                <button class="btn-ver" (click)="verIngreso(ingreso)">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-eye-icon lucide-eye"><path d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"/><circle cx="12" cy="12" r="3"/></svg>
                 </button>
 
@@ -115,14 +115,14 @@
             <!-- CARDS MÓVIL -->
             <div class="mobile-cards mobile-only" *ngIf="totalIngresos > 0">
                 <div class="ingreso-card-mobile" *ngFor="let ingreso of ingresosPaginados">
-                    <div class="card-mobile-header" (click)="verDetalle(ingreso)">
+                    <div class="card-mobile-header" (click)="verIngreso(ingreso)">
                         <span class="badge-factura">{{ ingreso.numeroFactura }}</span>
                         <span class="badge" [class.badge-secondary]="ingreso.estado === 'BORRADOR'" [class.badge-primary]="ingreso.estado === 'FINALIZADO'">
               {{ ingreso.estado }}
             </span>
                     </div>
 
-                    <div class="card-mobile-body" (click)="verDetalle(ingreso)">
+                    <div class="card-mobile-body" (click)="verIngreso(ingreso)">
                         <div class="info-row">
                             <span class="label">Proveedor</span>
                             <strong>{{ ingreso.proveedor }}</strong>
@@ -147,7 +147,7 @@
                     </div>
 
                     <div class="card-mobile-footer">
-                        <span class="ver-detalle" (click)="verDetalle(ingreso)">Ver detalles →</span>
+                        <span class="ver-detalle" (click)="verIngreso(ingreso)">Ver detalles →</span>
 
                         <button class="btn-eliminar-mobile" *ngIf="ingreso.estado === 'BORRADOR'" (click)="eliminar(ingreso.id!, $event)">
               🗑️ Eliminar
