Exportar e Importar productos Excel

--- a/src/app/modules/productos/pages/listar-productos/listar-productos.html
+++ b/src/app/modules/productos/pages/listar-productos/listar-productos.html
@@ -18,6 +18,12 @@
                     </button>
                 </div>
                 <div class="action-buttons">
+                    <button class="btn btn-outline-success" (click)="exportarProductos()" title="Exportar productos a Excel">
+                        <i class="bi bi-file-earmark-excel"></i><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-up-to-line-icon lucide-arrow-up-to-line"><path d="M5 3h14"/><path d="m18 13-6-6-6 6"/><path d="M12 7v14"/></svg> Exportar
+                    </button>
+                    <button class="btn btn-outline-primary" (click)="importarProductos()" title="Importar productos desde Excel">
+                        <i class="bi bi-file-earmark-arrow-up"></i><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-down-to-line-icon lucide-arrow-down-to-line"><path d="M12 17V3"/><path d="m6 11 6 6 6-6"/><path d="M19 21H5"/></svg>  Importar
+                    </button>
                     <button class="btn btn-success" (click)="nuevoIngreso()">
                         <i class="bi bi-file-earmark-arrow-down"></i> + Nuevo Ingreso
                     </button>
